Updates Java version to 11

--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,8 @@
     <artifactId>HangmanGame</artifactId>
     <version>1.0-SNAPSHOT</version>
     <properties>
-        <maven.compiler.release>11</maven.compiler.release>
+        <maven.compiler.target>11</maven.compiler.target>
+        <maven.compiler.source>11</maven.compiler.source>
     </properties>
 
 
